Fix level responsivity on mobile device

--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -71,6 +71,41 @@
   .checkpoint-container {
     padding: 0;
   }
+  .about-me-detail>* {
+    box-shadow: none;
+  }
+  .quiz h3 {
+    margin: 0 auto;
+  }
+  #level-container {
+    margin-top: 0;
+  }
+  header {
+    margin: 2rem;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .hero {
+    margin: 6rem 0;
+  }
+  .hero-buttons * {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .hero h1 {
+    font-size: 6rem;
+  }
+  .hero h2 {
+    font-size: 1.3rem;
+  }
+  .nihongo h4 {
+    font-size: 4rem;
+  }
+  .hiragana p, .reason-detail p {
+    font-size: 1rem;
+  }
 }
 
 #mobile-indicator {
